# pdfTrans

./: AGENTS.md  Dockerfile.hf  README.hf.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: docs.yml  exe-build.yml  fork-build.yml  python-test.yml  rebuild.yml  release.yml
pdf2zh_app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
pdf2zh_app/src/: App.svelte  app.css
pdf2zh_app/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
pdf2zh_app/src-tauri/capabilities/: default.json
pdf2zh_app/src-tauri/icons/: icon.icns
pdf2zh_app/src-tauri/src/: commands.rs  config.rs  main.rs
pdf2zh_app/src-tauri/src/python_bridge/: mod.rs  protocol.rs  subprocess.rs
pdf2zh_next/: __main__.py  high_level.py  json_stream.py  main.py
pdf2zh_next/config/: model.py
pdf2zh_tui/: Cargo.toml
pdf2zh_tui/src/: action.rs  app.rs  event.rs  main.rs  tui.rs
pdf2zh_tui/src/config/: mod.rs
pdf2zh_tui/src/python_bridge/: mod.rs  protocol.rs  subprocess.rs
pdf2zh_tui/src/ui/: mod.rs
pdf2zh_tui/src/ui/views/: configure.rs  mod.rs  progress.rs  results.rs  status.rs
pdf2zh_tui/src/ui/widgets/: mod.rs
tests/: test_high_level.py
tests/config/: test_model.py
