[package]
name = "pdf2zh-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for PDFMathTranslate-next (pdf2zh_next)"
license = "AGPL-3.0"

[[bin]]
name = "pdf2zh-tui"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.30"
crossterm = { version = "0.28", features = ["bracketed-paste"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"
toml_edit = "0.22"

# Collections
indexmap = { version = "2", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
dirs = "6"
which = "7"
unicode-width = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
