[package]
name = "pdf2zh-app"
version = "0.1.0"
edition = "2021"
description = "macOS app for PDFMathTranslate-next"
license = "AGPL-3.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Collections
indexmap = { version = "2", features = ["serde"] }

# Config
toml = "0.8"
toml_edit = "0.22"

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
dirs = "6"
which = "7"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
